--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -83,6 +83,14 @@
   height: 1em;
 }
 
+.centeredContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
