--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,17 @@ body {
   margin: 0;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: black;
+  color: white;
 }
 
 a {
-  color: inherit;
+  color: white;
   text-decoration: none;
+}
+
+a:visited {
+  color: white;
 }
 
 * {
