--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,21 +22,13 @@
   margin: 0 0 1rem;
   line-height: 1.15;
   font-size: 3.6rem;
+  text-align: center; 
 }
-
-.title {
-  text-align: center;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
 
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
+  text-align: center; 
 }
 
 .grid {
@@ -44,7 +36,6 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-
   max-width: 800px;
   margin-top: 3rem;
 }
@@ -91,6 +82,10 @@
   height: 65vh;
 }
 
+.signatureVideo {
+  width: 600px;
+  height: 300px;
+}
 
 @media (max-width: 600px) {
   .grid {
