--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -87,6 +87,7 @@
   width: 100%;
   max-width: 600px;
   margin: auto;
+  /* margin-bottom: 150px; */
 }
 
 .signatureVideo {
@@ -99,13 +100,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 0px;
+  margin-top: -100px;
 }
 
 .socialIcon {
   display: flex;
   align-items: center;
   margin-bottom: 40px;
+}
+
+.socialIcon span {
+  font-family: "Noto Sans", sans-serif;
+  font-size: 26px;
+  margin-left: 10px;
 }
 
 @media (max-width: 600px) {
@@ -116,10 +123,32 @@
 
   .signatureAnimation {
     max-width: 100%;
+    padding-bottom: 50px;
   }
 
   .socialIconsContainer {
     flex-direction: column;
     align-items: center;
+  }
+
+  .socialIconsContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -40px;
+    margin-bottom: -60px;
+  }
+
+  .socialIcon {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+
+  .socialIcon span {
+    font-family: "Noto Sans", sans-serif;
+    font-size: 16px;
+    margin-left: 10px;
   }
 }
