--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -31,9 +31,15 @@
   font-size: 1.2rem;
   text-align: center;
   margin-bottom: 10px;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .projectDescription {
   font-size: 1rem;
   color: #666;
+}
+
+.projectPageTitle {
+  margin-bottom: 30px;
+  font-family: "Noto Sans", sans-serif;
 }
