--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,47 +1,3 @@
-/* .header {
-  display: flex;
-  justify-content: space-between;
-  padding: 30px;
-  align-items: center;
-}
-
-.link {
-  margin-right: 15px;
-  font-size: 30px;
-  transition: color 0.3s;
-}
-
-.link:hover {
-  color: #494949;
-}
-
-.symbol {
-  color: #5918df;
-}
-
-@media (max-width: 600px) {
-  .header {
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px;
-  }
-
-  .link {
-    font-size: 18px;
-    margin-right: 10px;
-  }
-
-  .hamburger-menu {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .hamburger-menu {
-    display: block;
-  }
-} */
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -64,12 +20,12 @@
 
 .titlesymbol {
   color: #5918df;
-  font-size: 48px;
+  font-size: 38px;
 }
 
 .linksymbol {
   color: #5918df;
-  font-size: 26px;
+  font-size: 28px;
 }
 
 .title {
@@ -81,35 +37,49 @@
   color: white;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .header {
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: row; /* Keep the main axis horizontal */
+    justify-content: space-between; /* Space between title and links */
     padding: 10px;
+  }
+
+  .header > div:first-child {
+    /* title sep div adds */
+  }
+
+  .header > div:last-child {
+    display: flex;
+    flex-direction: column; /* Stack the links vertically */
+    align-items: flex-end; /* Align links to the right side */
+    margin-left: auto; /* Push the links container to the right */
   }
 
   .link,
   .title {
     font-size: 18px;
-    margin-right: 10px;
+    margin-right: 0; /* Remove the margin on the right of the links */
+    font-family: "Noto Sans", sans-serif;
+  }
+
+  .link:not(:last-child) {
+    margin-bottom: 5px; /* Add space between stacked links */
   }
 
   .title {
-    font-family: "Source Sans Pro", sans-serif;
-    font-weight: 600;
-    font-style: italic;
+    font-size: 28px; /* Adjusted for mobile, if needed */
+  }
+
+  .titlesymbol {
     font-size: 28px;
-    text-transform: lowercase;
-    color: white;
+  }
+
+  .linksymbol {
+    /* Adjust symbol sizes if necessary */
+    font-size: 18px;
   }
 
   .hamburger-menu {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .hamburger-menu {
-    display: block;
+    display: none; /* Adjust based on your design */
   }
 }
