--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -1,78 +1,3 @@
-/* .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0 0 1rem;
-  line-height: 1.15;
-  font-size: 3.6rem;
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-} */
-
 .centeredContent {
   display: flex;
   flex-direction: column;
@@ -123,7 +48,7 @@
 
   .signatureAnimation {
     max-width: 100%;
-    padding-bottom: 50px;
+    padding-bottom: 50px; /* Maintain space below the signature */
   }
 
   .socialIconsContainer {
@@ -131,14 +56,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -40px;
-    margin-bottom: -60px;
+    margin-top: -100px; /* Adjust this value to move icons up as needed */
+    margin-bottom: 90px; /* Adjust if needed to prevent overlapping with other content */
   }
 
   .socialIcon {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 30px; /* Space between icons */
   }
 
   .socialIcon span {
