--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,6 +1,6 @@
 .aboutContainer {
   text-align: center;
-  margin-top: 80px;
+  margin-top: 40px;
 }
 
 .aboutTitle {
@@ -24,4 +24,11 @@
   max-width: 300px;
   margin: 20px auto;
   display: block;
+}
+
+@media (max-width: 600px) {
+  .aboutContainer {
+    text-align: center;
+    margin-top: -50px;
+  }
 }
