--- a/styles/Timeline.module.css
+++ b/styles/Timeline.module.css
@@ -14,6 +14,7 @@
   position: relative;
   max-width: 600px;
   list-style: none;
+  margin-bottom: 20px;
 }
 
 .timeline:before {
@@ -24,6 +25,17 @@
   left: 50%;
   width: 2px;
   height: 100%;
+}
+
+.timeline::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 80%; /* Adjust the width as needed */
+  height: 2px; /* Adjust the thickness of the line */
+  background-color: white; /* Adjust the color as needed */
 }
 
 .event {
