--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,3 +42,9 @@ button {
   padding: 0.5rem 1rem;
   font-weight: bold;
 }
+
+html,
+body {
+  scroll-behavior: smooth;
+  scroll-padding-top: 70px; /* Height of your fixed header */
+}
