--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,14 +1,10 @@
 .projectsContainer {
   display: grid;
-  grid-template-columns: repeat(
-    auto-fit,
-    minmax(300px, 1fr)
-  ); /* This will create a responsive number of columns */
-  gap: 20px;
-  padding: 20px;
-  /* If the projects container is too wide, you might want to limit its max-width */
-  max-width: 1200px; /* Adjust this value to fit your design */
-  margin: 0 auto; /* Center the container on the page */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+  padding: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .projectCard {
@@ -16,11 +12,14 @@
   border-radius: 8px;
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-align: center;
+  text-transform: lowercase;
 }
 
 .projectCard:hover {
   transform: scale(1.05);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 .projectImage {
@@ -34,14 +33,42 @@
 }
 
 .projectPageTitle {
-  margin-top: 80px; /* You have this set in your inline styles, so it should be consistent */
-  margin-bottom: 30px;
-  text-align: center; /* Centering the title */
+  margin-top: 80px;
+  margin-bottom: 0px;
+  text-align: center;
   font-family: "Noto Sans", sans-serif;
-  font-size: 2rem; /* Set the font size for your title as needed */
+  font-size: 2rem;
 }
 
 .projectDescription {
   font-size: 1rem;
   color: #666;
+}
+@media (max-width: 600px) {
+  .projectsContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+    padding: 30px;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-bottom: 90px;
+  }
+
+  .projectPageTitle {
+    margin-top: 90px;
+    margin-bottom: 8px;
+    text-align: center;
+    font-family: "Noto Sans", sans-serif;
+    font-size: 2rem;
+  }
+
+  .projectsContainer::before {
+    /* content: "";
+    display: block;
+    height: 80px;
+    margin-top: -80px; 
+    visibility: hidden;
+    pointer-events: none; */
+  }
 }
