--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 72vh;
+  height: 90vh;
 }
 
 .signatureAnimation {
@@ -41,6 +41,14 @@
 }
 
 @media (max-width: 600px) {
+  .centeredContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 75vh;
+  }
+
   .grid {
     width: 100%;
     flex-direction: column;
@@ -48,7 +56,7 @@
 
   .signatureAnimation {
     max-width: 100%;
-    padding-bottom: 50px; /* Maintain space below the signature */
+    padding-bottom: 50px;
   }
 
   .socialIconsContainer {
@@ -56,14 +64,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -100px; /* Adjust this value to move icons up as needed */
-    margin-bottom: 90px; /* Adjust if needed to prevent overlapping with other content */
+    margin-top: -120px;
+    margin-bottom: 90px;
   }
 
   .socialIcon {
     display: flex;
     align-items: center;
-    margin-bottom: 30px; /* Space between icons */
+    margin-bottom: 30px;
   }
 
   .socialIcon span {
