--- a/styles/Timeline.module.css
+++ b/styles/Timeline.module.css
@@ -33,9 +33,9 @@
   left: 50%;
   bottom: 0;
   transform: translateX(-50%);
-  width: 80%; /* Adjust the width as needed */
-  height: 2px; /* Adjust the thickness of the line */
-  background-color: white; /* Adjust the color as needed */
+  width: 80%;
+  height: 2px;
+  background-color: white;
 }
 
 .event {
@@ -117,7 +117,6 @@
 }
 
 .description {
-  /* Add some description styling later */
   font-size: 0.8em;
   max-width: 180px;
   word-break: break-word;
@@ -133,6 +132,10 @@
 }
 
 @media (max-width: 600px) {
+  .container {
+    margin-bottom: 90px;
+  }
+
   .body h3 {
     color: #5918df;
     font-size: 1em;
@@ -148,7 +151,6 @@
   }
 
   .description {
-    /* Add some description styling later */
     font-size: 0.8em;
     max-width: 155px;
     word-break: break-word;
