--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -5,6 +5,8 @@
   padding: 30px;
   max-width: 1200px;
   margin: 0 auto;
+  position: relative;
+  z-index: 2;
 }
 
 .projectCard {
@@ -14,6 +16,8 @@
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   text-align: center;
   text-transform: lowercase;
+  position: relative;
+  z-index: 2;
 }
 
 .projectCard:hover {
@@ -38,6 +42,8 @@
   text-align: center;
   font-family: "Noto Sans", sans-serif;
   font-size: 2rem;
+  position: relative;
+  z-index: 2;
 }
 
 .projectDescription {
