--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -12,12 +12,14 @@
   max-width: 600px;
   margin: auto;
   margin-bottom: 50px;
+  z-index: 0;
 }
 
 .signatureVideo {
   width: 100%;
   height: auto;
   margin-bottom: 50px;
+  position: relative;
 }
 
 .socialIconsContainer {
